tests/pass/0084_callee_scope_does_not_modify_caller_shadow.ee
fn helper() {
    let x = 1;
    x = x + 1;
    debugPrint(x);
}

fn main() {
    let x = 9;
    helper();
    debugPrint(x);
}
