tests/fail/0051_callee_local_not_visible_in_caller.ee
fn helper() {
    let hidden = 1;
}

fn main() {
    helper();
    debugPrint(hidden);
}
